// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup matches snapshot when is has a value 1`] = `
.emotion-18 {
  display: inline-block;
}

.emotion-8 {
  margin-bottom: 8px;
}

.emotion-7 {
  position: relative;
  display: inline-block;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.emotion-6:hover [data-element='sprite'] {
  background: #879ba6;
}

.emotion-4 {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  visibility: hidden;
}

.emotion-0:checked + [data-element='sprite'] [data-element='icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.emotion-0:checked + [data-element='sprite'] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.emotion-0:disabled + [data-element='sprite'] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.emotion-0:disabled + [data-element='sprite'] [data-element='icon'] {
  opacity: 0.7;
}

.emotion-5 {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.emotion-5:hover {
  cursor: pointer;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 1000px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-2 {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.emotion-2 > i {
  font-size: 0.8rem;
}

.emotion-1 {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="emotion-18"
>
  <div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <label
          className="emotion-6"
          htmlFor={1}
        >
          <div
            className="emotion-4"
          >
            <input
              checked={true}
              className="emotion-0"
              id={1}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <div
              className="emotion-3"
              data-element="sprite"
            >
              <label
                className="emotion-2"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check emotion-1"
                />
              </label>
            </div>
          </div>
          <label
            className="emotion-5"
            data-element="label"
            htmlFor={1}
          >
            1
          </label>
        </label>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <label
          className="emotion-6"
          htmlFor={1}
        >
          <div
            className="emotion-4"
          >
            <input
              checked={false}
              className="emotion-0"
              id={1}
              onChange={[Function]}
              type="radio"
              value="3"
            />
            <div
              className="emotion-3"
              data-element="sprite"
            >
              <label
                className="emotion-2"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check emotion-1"
                />
              </label>
            </div>
          </div>
          <label
            className="emotion-5"
            data-element="label"
            htmlFor={1}
          >
            2
          </label>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup matches snapshot when is has no value 1`] = `
.emotion-18 {
  display: inline-block;
}

.emotion-8 {
  margin-bottom: 8px;
}

.emotion-7 {
  position: relative;
  display: inline-block;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.emotion-6:hover [data-element='sprite'] {
  background: #879ba6;
}

.emotion-4 {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  visibility: hidden;
}

.emotion-0:checked + [data-element='sprite'] [data-element='icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.emotion-0:checked + [data-element='sprite'] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.emotion-0:disabled + [data-element='sprite'] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.emotion-0:disabled + [data-element='sprite'] [data-element='icon'] {
  opacity: 0.7;
}

.emotion-5 {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.emotion-5:hover {
  cursor: pointer;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 1000px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-2 {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.emotion-2 > i {
  font-size: 0.8rem;
}

.emotion-1 {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="emotion-18"
>
  <div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <label
          className="emotion-6"
          htmlFor={1}
        >
          <div
            className="emotion-4"
          >
            <input
              checked={false}
              className="emotion-0"
              id={1}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <div
              className="emotion-3"
              data-element="sprite"
            >
              <label
                className="emotion-2"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check emotion-1"
                />
              </label>
            </div>
          </div>
          <label
            className="emotion-5"
            data-element="label"
            htmlFor={1}
          >
            1
          </label>
        </label>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <label
          className="emotion-6"
          htmlFor={1}
        >
          <div
            className="emotion-4"
          >
            <input
              checked={false}
              className="emotion-0"
              id={1}
              onChange={[Function]}
              type="radio"
              value="3"
            />
            <div
              className="emotion-3"
              data-element="sprite"
            >
              <label
                className="emotion-2"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check emotion-1"
                />
              </label>
            </div>
          </div>
          <label
            className="emotion-5"
            data-element="label"
            htmlFor={1}
          >
            2
          </label>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup matches snapshot when is read only 1`] = `
.emotion-1 {
  color: inherit;
}

.emotion-18 {
  display: inline-block;
}

.emotion-8 {
  margin-bottom: 8px;
}

.emotion-7 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  visibility: hidden;
}

.emotion-0:checked + [data-element='sprite'] [data-element='icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.emotion-0:checked + [data-element='sprite'] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.emotion-0:disabled + [data-element='sprite'] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.emotion-0:disabled + [data-element='sprite'] [data-element='icon'] {
  opacity: 0.7;
}

.emotion-5 {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.emotion-5:hover {
  cursor: pointer;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 1000px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-2 {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.emotion-2 > i {
  font-size: 0.8rem;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
  pointer-events: none;
}

.emotion-6:hover [data-element='sprite'] {
  background: #879ba6;
}

.emotion-6 [data-element='sprite'] {
  background: #eaeff4 !important;
}

.emotion-6 [data-element='locked-icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #879ba6;
}

<div
  className="emotion-18"
>
  <div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <label
          className="emotion-6"
          htmlFor={1}
        >
          <div
            className="emotion-4"
          >
            <input
              checked={true}
              className="emotion-0"
              id={1}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <div
              className="emotion-3"
              data-element="sprite"
            >
              <label
                className="emotion-2"
                data-element="locked-icon"
              >
                <i
                  className="emotion-1 Drycon Drycon-lock"
                />
              </label>
            </div>
          </div>
          <label
            className="emotion-5"
            data-element="label"
            htmlFor={1}
          >
            1
          </label>
        </label>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <label
          className="emotion-6"
          htmlFor={1}
        >
          <div
            className="emotion-4"
          >
            <input
              checked={false}
              className="emotion-0"
              id={1}
              onChange={[Function]}
              type="radio"
              value="3"
            />
            <div
              className="emotion-3"
              data-element="sprite"
            >
              <label
                className="emotion-2"
                data-element="locked-icon"
              >
                <i
                  className="emotion-1 Drycon Drycon-lock"
                />
              </label>
            </div>
          </div>
          <label
            className="emotion-5"
            data-element="label"
            htmlFor={1}
          >
            2
          </label>
        </label>
      </div>
    </div>
  </div>
</div>
`;
